--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         <footer>
             <div class="footer-container">
                 <div class="footer-texts">
-                    <div class="about">About</div>
-                    <div class="resources">Resources</div>
-                    <div class="inspiration">Inspirtaion</div>
+                    <div class="about"><a href="#">About</a></div>
+                    <div class="resources"><a href="#">Resources</a></div>
+                    <div class="inspiration"><a href="#">Inspirtaion</a></div>
                 </div>
             </div>
         </footer>
