--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     <img src="./images/Login Screen.jpg" />
                 </div>
                 <div class="work-text">
-                    Daily UI Challenge - Login Page
+                    <a href="#">Daily UI Challenge - Login Page</a>
                 </div>
                 <div class="work two">
                     <img src="./images//Sign Up Screen.jpg" />
                 </div>
                 <div class="work-text">
-                    Daily UI Challenge - SignUp Page
+                    <a href="#">Daily UI Challenge - SignUp Page</a>
                 </div>
             </div>
         </div>
