--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="right-links">
                     <div><a class="linkC" href="#">Contact</a></div>
-                    <div><a class="linkS" href="#">Socials</a></div>
+                    <div><a class="linkS" href="#">Skills</a></div>
                 </div>
             </div>
         </div>
