--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <div class="about"><a href="#">About</a></div>
                     <div class="resources"><a href="#">Resources</a></div>
                     <div class="inspiration"><a href="#">Inspirtaion</a></div>
+                    <div class="socials"><a href="#">Socials</a></div>
                 </div>
             </div>
         </footer>
